WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21115
REGRESSION (
r34702
): Safari no longer zips bundled documents
https://bugs.webkit.org/show_bug.cgi?id=21115
Summary
REGRESSION (r34702): Safari no longer zips bundled documents
Darin Adler
Reported
2008-09-25 12:10:45 PDT
This feature got broken somewhere along the line.
Attachments
patch
(3.61 KB, patch)
2008-09-25 12:12 PDT
,
Darin Adler
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-09-25 12:11:08 PDT
<
rdar://problem/6245773
>
Darin Adler
Comment 2
2008-09-25 12:12:35 PDT
Created
attachment 23814
[details]
patch
Darin Adler
Comment 3
2008-09-25 13:02:30 PDT
http://trac.webkit.org/changeset/36903
Eric Seidel (no email)
Comment 4
2009-05-21 00:34:04 PDT
Looks like this regressed again, see
bug 25879
. At least we can make automated tests for this now with
bug 25852
resolved!
Mark Rowe (bdash)
Comment 5
2009-05-21 00:54:35 PDT
This didn't regress. Eric misunderstood how this works.
Eric Seidel (no email)
Comment 6
2009-05-21 00:56:55 PDT
What Mark means is that the ChromeClient gets to decide. The Safari client only decides to handle package files.
bug 25879
is related, but not the same bug, as it's about handling directories in <input> elements. We accept the drop of a directory and then fail to handle it. We should either not accept the drop or handle them if we accept them. :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug