2008-09-25  Darin Adler  <darin@apple.com>

Reviewed by Adele Peterson.

        - fix https://bugs.webkit.org/show_bug.cgi?id=21115
          <rdar://problem/6245773> REGRESSION (r34702): Safari no longer zips
          bundled documents

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::formData): Use files() instead of value()
        to get the path, since value() now returns just the basename.



Canonical link: https://commits.webkit.org/29173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36903 268f45cc-cd09-0410-ab3c-d52691b4dbfc